--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          path: 'rust'
+          reposity: ${{ github.repository }}/rust
       - name: Build project
         run: cargo build --release
 #       - name: copy file
