--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -18,6 +18,7 @@ realfft = "3.0.0"
 rand="0.8.0"
 hound = "3.4.0"
 chrono = "0.4"
-clap = "3.2.13"
-bwavfile = "1.1.0"
+clap = { version = "4.3.17", features = ["derive"] }
+bwavfile = "2.0.1"
 crossbeam-utils = "0.8.7"
+klask = "1.0.0"
